Added support for CMS and G1 collectors.
git-svn-id: http://svn.cometd.com/trunk@1616 3f0894df-830e-0410-bb9a-a3a9c902c5bb